# Maestro-Chess-Engine

./: CMakeLists.txt  README.md  parsing.py
src/: bench.csv  bitboard.cpp  bitboard.hpp  defs.hpp  engine.cpp  engine.hpp  eval.cpp  eval.hpp  hash.cpp  hash.hpp  hashtable.cpp  hashtable.hpp  history.cpp  history.hpp  main.cpp  misc.cpp  misc.hpp  move.hpp  movegen.cpp  movegen.hpp  movepick.cpp  movepick.hpp  movepicker.cpp  movepicker.hpp  nnue.cpp  nnue.hpp  pawns.cpp  pawns.hpp  perft.cpp  perft.hpp  polyglot.cpp  polyglot.hpp  position.cpp  position.hpp  position.ipp  search.cpp  search.hpp  thread.cpp  thread.hpp  uci.cpp  (+2 more)
